--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^8.3.2"
 line-length = 120
 indent-width = 4
 target-version = "py312"
+extend-exclude = ["pn532/"]
 
 [build-system]
 requires = ["poetry-core"]
