--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,19 @@
-[tool.poetry]
+[project]
 name = "jukebox"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "python-dotenv>=1.0.1",
+    "soco>=0.30.5",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-soco = "^0.30.4"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.5.6"
-pytest = "^8.3.2"
+[dependency-groups]
+dev = [
+    "pytest>=8.3.3",
+    "ruff>=0.7.1",
+]
 
 [tool.ruff]
 line-length = 120
@@ -20,5 +22,6 @@ target-version = "py312"
 extend-exclude = ["pn532/"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+# uv does not provide a build backend yet
+requires = ["hatchling"]
+build-backend = "hatchling.build"
