--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  UV_PROJECT_ENVIRONMENT: $PYTHONPATH
+  UV_PROJECT_ENVIRONMENT: $pythonLocation
 
 jobs:
   build:
