--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,7 @@ extend-exclude = ["pn532/"]
 # uv does not provide a build backend yet
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.scripts]
+jukebox = "jukebox.ncfreader:main"
+player = "jukebox.players.utils:main"
