--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,5 +27,6 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project.scripts]
-jukebox = "jukebox.ncfreader:main"
+jukebox = "jukebox.app:main"
 player = "jukebox.players.utils:main"
+reader = "jukebox.readers.utils:main"
