--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,9 +2,9 @@ name: ci
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -17,8 +17,8 @@ env:
   UV_PROJECT_ENVIRONMENT: $pythonLocation
 
 jobs:
-  build:
-    name: python
+  test-and-lint:
+    name: Run Tests & Linting
     runs-on: ubuntu-latest
 
     steps:
@@ -43,3 +43,32 @@ jobs:
 
       - name: Test with pytest
         run: uv run pytest
+
+  build:
+    name: Build Package
+    needs: test-and-lint
+    # if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: ".python-version"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Build package
+        run: uv build
+
+      - name: Upload package artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: built-package
+          path: dist/
