--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ name = "jukebox"
 version = "0.1.0"
 description = ""
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.7"
 dependencies = [
-    "soco>=0.30.5",
+    "soco==0.30.5",
 ]
 
 [dependency-groups]
 dev = [
-    "pytest>=8.3.3",
-    "ruff>=0.7.1",
+    "pytest>=3.7",
+    "ruff==0.7.1",
 ]
 
 [tool.ruff]
@@ -24,6 +24,12 @@ extend-exclude = ["pn532/"]
 # uv does not provide a build backend yet
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+include = ["jukebox", "pn532"]
+
+[tool.hatch.build.targets.wheel]
+include = ["jukebox", "pn532"]
 
 [project.scripts]
 jukebox = "jukebox.app:main"
