--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,7 +19,20 @@ env:
 jobs:
   test-and-lint:
     name: Run Tests & Linting
-    runs-on: ubuntu-latest
+    # The version '3.7' with architecture 'x64' is only available in version 22.04:
+    # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
+    runs-on: ubuntu-22.04
+
+    strategy:
+      matrix:
+        python-version:
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
 
     steps:
       - uses: actions/checkout@v4
@@ -27,7 +40,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: ".python-version"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@v6
