--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -59,7 +60,6 @@ jobs:
   build:
     name: Build Package
     needs: test-and-lint
-    # if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
@@ -80,6 +80,7 @@ jobs:
         run: uv build
 
       - name: Upload package artifact
+        if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
         uses: actions/upload-artifact@v4
         with:
           name: built-package
