--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -63,7 +63,7 @@ jobs:
   build:
     name: Build Package
     needs: test-and-lint
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v4
@@ -71,7 +71,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: ".python-version"
+          python-version: "3.7"
 
       - name: Install uv
         uses: astral-sh/setup-uv@v6
