--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "jukebox and disc store bundle"
 readme = "README.md"
 requires-python = ">=3.7,<3.13"
 dependencies = [
-    "pydantic==2.5.3",
+    "pydantic==2.5.3; python_version < '3.10'",
+    "pydantic==2.10.6; python_version >= '3.10'",
     "soco==0.30.11",
     "typing_extensions; python_version=='3.7.*'",
 ]
@@ -13,7 +14,14 @@ dependencies = [
 [project.optional-dependencies]
 api = [
     "fastapi==0.116.1; python_version >= '3.8'",
-    "uvicorn==0.33.0; python_version >= '3.8'",
+    "uvicorn==0.33.0; python_version == '3.8'",
+    "uvicorn==0.33.0; python_version == '3.9'",
+    "uvicorn==0.35.0; python_version >= '3.10'",
+]
+ui = [
+    "pydantic==2.10.6; python_version >= '3.10'",
+    "fastapi==0.116.1; python_version >= '3.10'",
+    "fastui==0.7.0; python_version >= '3.10'",
 ]
 
 [dependency-groups]
