--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,14 +14,15 @@ dependencies = [
 [project.optional-dependencies]
 api = [
     "fastapi==0.116.1; python_version >= '3.8'",
-    "uvicorn==0.33.0; python_version == '3.8'",
-    "uvicorn==0.33.0; python_version == '3.9'",
+    "uvicorn==0.33.0; python_version >= '3.8' and python_version < '3.10'",
     "uvicorn==0.35.0; python_version >= '3.10'",
 ]
 ui = [
+    "uvicorn==0.35.0; python_version >= '3.10'",
     "pydantic==2.10.6; python_version >= '3.10'",
     "fastapi==0.116.1; python_version >= '3.10'",
     "fastui==0.7.0; python_version >= '3.10'",
+    "python-multipart==0.0.20; python_version >= '3.10'",
 ]
 
 [dependency-groups]
