--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,7 @@ api = [
     "uvicorn==0.35.0; python_version >= '3.10'",
 ]
 ui = [
-    "uvicorn==0.35.0; python_version >= '3.10'",
-    "pydantic==2.10.6; python_version >= '3.10'",
-    "fastapi==0.116.1; python_version >= '3.10'",
+    "jukebox[api]",
     "fastui==0.7.0; python_version >= '3.10'",
     "python-multipart==0.0.20; python_version >= '3.10'",
 ]
