--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,14 +55,12 @@ target-version = "py312"
 extend-exclude = ["pn532/"]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.8.7,<0.9.0"]
+build-backend = "uv_build"
 
-[tool.hatch.build.targets.sdist]
-include = ["jukebox", "discstore", "pn532"]
-
-[tool.hatch.build.targets.wheel]
-include = ["jukebox", "discstore", "pn532"]
+[tool.uv.build-backend]
+module-name = ["jukebox", "discstore", "pn532"]
+module-root = ""
 
 [project.scripts]
 gukebox = "jukebox.app:main"
