--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,7 @@ version = "0.4.0a0"
 description = "A Jukebox to play music on speakers using 'CD' with NFC tag"
 authors = [{ name = "Gudsfile" }]
 readme = "README.md"
-license = "MIT"
-license-files = ["LICENSE"]
+license = { file = "LICENSE" }
 requires-python = ">=3.7,<3.13"
 dependencies = [
     "pydantic==2.5.3; python_version < '3.10'",
@@ -39,6 +38,11 @@ ui = [
     "gukebox[api]",
     "fastui==0.7.0; python_version >= '3.10'",
     "python-multipart==0.0.20; python_version >= '3.10'",
+]
+nfc = [
+    "pyserial==3.5",
+    "rpi-gpio==0.7.1",
+    "spidev==3.7",
 ]
 
 [dependency-groups]
