--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.7",
@@ -39,18 +40,10 @@ ui = [
     "fastui==0.7.0; python_version >= '3.10'",
     "python-multipart==0.0.20; python_version >= '3.10'",
 ]
-nfc = [
-    "pyserial==3.5",
-    "rpi-gpio==0.7.1",
-    "spidev==3.7",
-]
+nfc = ["pyserial==3.5", "rpi-gpio==0.7.1", "spidev==3.7"]
 
 [dependency-groups]
-dev = [
-    "pytest==7.4.4",
-    "pytest-mock==3.11.1",
-    "ruff==0.12.8",
-]
+dev = ["pytest==7.4.4", "pytest-mock==3.11.1", "ruff==0.12.8"]
 
 [tool.ruff]
 line-length = 120
