--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,17 @@ description = "A Jukebox to play music on speakers using 'CD' with NFC tag"
 authors = [{ name = "Gudsfile" }]
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.7,<3.13"
+requires-python = ">=3.8,<3.13"
 dependencies = [
     "pydantic==2.5.3; python_version < '3.10'",
     "pydantic==2.10.6; python_version >= '3.10'",
     "soco==0.30.12",
-    "typing_extensions; python_version=='3.7.*'",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -31,8 +29,8 @@ Repository = "https://github.com/Gudsfile/jukebox"
 
 [project.optional-dependencies]
 api = [
-    "fastapi==0.118.0; python_version >= '3.8'",
-    "uvicorn==0.33.0; python_version >= '3.8' and python_version < '3.10'",
+    "fastapi==0.118.0",
+    "uvicorn==0.33.0; python_version < '3.10'",
     "uvicorn==0.35.0; python_version >= '3.10'",
 ]
 ui = [
