--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,11 @@ description = "A Jukebox to play music on speakers using 'CD' with NFC tag"
 authors = [{ name = "Gudsfile" }]
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.8,<3.13"
+requires-python = ">=3.8"
 dependencies = [
     "pydantic==2.5.3; python_version < '3.10'",
-    "pydantic==2.10.6; python_version >= '3.10'",
+    "pydantic==2.10.6; python_version >= '3.10' and python_version < '3.13'",
+    "pydantic==2.12.5; python_version >= '3.13'",
     "soco==0.30.12",
 ]
 classifiers = [
@@ -21,6 +22,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 keywords = ["jukebox", "discstore", "music", "nfc"]
 
@@ -51,7 +53,7 @@ dev = [
 [tool.ruff]
 line-length = 120
 indent-width = 4
-target-version = "py312"
+target-version = "py313"
 extend-exclude = ["pn532/"]
 
 [tool.ruff.lint]
