--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ ui = [
     "fastui==0.8.0; python_version >= '3.10'",
     "python-multipart==0.0.20; python_version >= '3.10'",
 ]
-nfc = ["pyserial==3.5", "rpi-gpio==0.7.1", "spidev==3.8"]
+nfc = ["pyserial==3.5", "spidev==3.8"]
 
 [dependency-groups]
 dev = ["pytest==7.4.4", "pytest-mock==3.11.1", "ruff==0.14.6"]
