♻️ create an adapter for the jukebox config

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@
 # fi
 
 ## IP address of your Sonos Zone Player, required if you use the Sonos player
-SONOS_HOST="XXX.XXX.XXX.XXX"
+JUKEBOX_SONOS_HOST="XXX.XXX.XXX.XXX"
 
 ## Path of the library.json file, optional
 # JUKEBOX_LIBRARY_PATH="~/.jukebox/library.json"
