--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,8 @@ target-version = "py312"
 extend-exclude = ["pn532/"]
 
 [tool.ruff.lint]
-select = [
+extend-select = [
+    "SIM",
     "I",
 ]
 
