🚨 ignore false positive type-checker error for py<3.10
🚨 ignore missing-argument type-checker error for py<3.10

Ignoring missing-argument rule for now as it is a false positive for pydantic 2.5.3 (necessary for python <3.10):
"No arguments provided for required parameters `__pydantic_extra__`, `__pydantic_fields_set__`, `__pydantic_private__`"

However, we still want to check this rule, so CI/CD will treat this rule as an error for Python >= 3.10.

🚨 ignore type-checker error for directory as it is not part of the project

E.g.:
"ty (unresolved-import): opt/hostedtoolcache/Python/3.9.25/x64/lib/python3.9/site-packages/_pytest/_code/__init__.py#L9
opt/hostedtoolcache/Python/3.9.25/x64/lib/python3.9/site-packages/_pytest/_code/__init__.py:9:7: unresolved-import: Cannot resolve imported module `.source`"

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
     inputs:
       python-version:
-        description: "Python version (empty for all)"
+        description: "Python version (leave empty for all)"
         required: false
         default: ""
 
@@ -59,8 +59,20 @@ jobs:
       - name: Test with pytest
         run: uv run pytest
 
+      - name: Set ty_args based on Python version
+        # Check the missig-argument rule for Python versions >= 3.10
+        # Exclude the opt/ directory as it is not part of the project
+        run: |
+          if [[ "${{ matrix.python-version }}" == "3.8" ]]; then
+            echo "ty_args=--ignore missing-argument --exclude opt/" >> $GITHUB_ENV
+          elif [[ "${{ matrix.python-version }}" == "3.9" ]]; then
+            echo "ty_args=--ignore missing-argument --exclude opt/" >> $GITHUB_ENV
+          else
+            echo "ty_args=--error missing-argument" >> $GITHUB_ENV
+          fi
+
       - name: Type check with ty
-        run: uv run ty check --output-format github
+        run: uv run ty check $ty_args --output-format github
 
   build:
     name: Build Package
