--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,12 @@ extend-select = [
 [tool.ty.src]
 exclude = ["pn532/"]
 
+[tool.ty.rules]
+# Ignoring missing-argument rule for now as it is a false positive for pydantic 2.5.3 (necessary for python <3.10):
+# "No arguments provided for required parameters `__pydantic_extra__`, `__pydantic_fields_set__`, `__pydantic_private__`"
+# CI/CD will treat this rule as an error for Python >= 3.10.
+missing-argument = "warn"
+
 [build-system]
 requires = ["uv_build>=0.8.7,<0.9.0"]
 build-backend = "uv_build"
