--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,12 @@ ui = [
     "fastui==0.8.0; python_version >= '3.10'",
     "python-multipart==0.0.20; python_version >= '3.10'",
 ]
-nfc = ["pyserial==3.5", "spidev==3.8"]
+nfc = [
+  "pyserial==3.5",
+  "spidev==3.8",
+  # lgpio wheels not available for Python >= 3.13
+  "lgpio==0.2.2.0; python_version < '3.13'",
+]
 
 [dependency-groups]
 dev = [
