--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,23 +1,30 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-
 version: 2
 enable-beta-ecosystems: true
 updates:
   - package-ecosystem: "uv"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     open-pull-requests-limit: 10
     commit-message:
       prefix: "⬆️ "
+    groups:
+      uv:
+        # dependency-type:
+        # currently not supported: https://github.com/dependabot/dependabot-core/issues/13202
+        update-types:
+          - "minor"
+          - "patch"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     open-pull-requests-limit: 10
     commit-message:
       prefix: "⬆️ "
+    groups:
+      actions:
+        update-types:
+          - "minor"
+          - "patch"
