--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A Jukebox to play music on speakers using 'CD' with NFC tag"
 authors = [{ name = "Gudsfile" }]
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.8"
+requires-python = ">=3.8,<3.14"
 dependencies = [
     "pydantic==2.5.3; python_version < '3.10'",
     "pydantic==2.10.6; python_version >= '3.10' and python_version < '3.13'",
