👷 run workflow if relevant files are modified

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,9 +3,19 @@ name: ci
 on:
   push:
     branches: ["main"]
+    paths:
+      - "**/*.py"
+      - "pyproject.toml"
+      - "uv.lock"
+      - ".github/workflows/python.yml"
   pull_request:
     branches: ["main"]
     types: [opened, synchronize, reopened, unlabeled]
+    paths:
+      - "**/*.py"
+      - "pyproject.toml"
+      - "uv.lock"
+      - ".github/workflows/python.yml"
   workflow_dispatch:
     inputs:
       python-version:
